@@ -1,5 +1,8 @@
 Wed Dec  6 14:42:57 1995  Karl Fogel  <kfogel@floss.cyclic.com>
 
+        * server.c (check_password): new func.
+        (authenticate_connection): call above new func.
+
         * login.c (login): use construct_cvspass_filename().
         If CVSroot is not "fully-qualified", then insist the user qualify
         it before going on.
